about section alignment fixed

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -2,12 +2,6 @@
   margin-bottom: calc(3rem + 5.128vw)
 }
 
-.table td,
-.table th {
-  color: var(--text-color);
-  background-color: var(--bg-color);
-}
-
 .t_border {
   border-color: var(--text-color) !important;
 }
